[gd_scene load_steps=10 format=3 uid="uid://cw8r4m1xxr3wm"]

[ext_resource type="Script" uid="uid://co1ykfwb2box4" path="res://Scripts/RangedEnemy.gd" id="1_qsv0l"]
[ext_resource type="Texture2D" uid="uid://dedlfaugd2u5j" path="res://Sprites/Enemies/bigguyonfieldrangeminion.png" id="2_gtfvv"]
[ext_resource type="Script" uid="uid://diq1hhemblpte" path="res://Scripts/LaserRay.gd" id="3_rrnee"]
[ext_resource type="AudioStream" uid="uid://dn4ihdvnad5t3" path="res://Sounds/death.wav" id="4_gtfvv"]
[ext_resource type="AudioStream" uid="uid://brb57ah1ct6n8" path="res://Sounds/laserShootenemy.wav" id="5_rrnee"]

[sub_resource type="CircleShape2D" id="CircleShape2D_px7d7"]
radius = 16.0312

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qch74"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ooort"]
bg_color = Color(0.42404, 0.120291, 0.0953147, 1)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_vjhl7"]
polygon = PackedVector2Array(-39.5, -45.7, -39.5, -42.2, -44.5, -34.1, -44.5, -26.2, -52.6, -13.5, -54.1, -13.5, -55.5, -6.7, -55.5, -2.1, -52.5, 4.8, -57.2, 3.5, -62.9, 3.5, -65.9, 11.5, -67.5, 11.5, -67.5, 17.7, -60.5, 21.6, -60.5, 23.6, -44.4, 22.5, -43.6, 22.5, -41.3, 26.4, -41.7, 27.5, -44.2, 27.5, -41.5, 36.5, -41.5, 39.3, -3.5, 42.3, -3.5, 43.8, 17.6, 40.4, 18.7, 41.5, 33, 41.5, 40, 37.5, 43.3, 37.5, 39.5, 26.4, 43.5, 23.5, 43.5, 22.6, 53.4, 23.5, 58.2, 23.5, 64.2, 18.5, 67.2, 18.5, 64.5, 9.5, 64.5, 5.5, 51.4, 5.5, 54.5, -3.1, 54.5, -6.9, 51.5, -15, 51.5, -17.3, 43.5, -26.4, 43.5, -34.1, 38.5, -42.2, 38.5, -43.8, 36.2, -44.9, 28.3, -38.2, 21.5, -40.9, 21.5, -42.3, 10.5, -43.4, 10.5, -44.6, -9.6, -43.5, -15.9, -43.5, -29.5, -37.7, -29.5, -40.7)

[node name="RangedEnemy" type="CharacterBody2D" groups=["Enemies"]]
light_mask = 2
collision_layer = 2
collision_mask = 2
script = ExtResource("1_qsv0l")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2.00002, 15)
rotation = 4.71239
scale = Vector2(0.38, 0.38)
texture = ExtResource("2_gtfvv")

[node name="LaserRay" type="RayCast2D" parent="Sprite2D"]
position = Vector2(47.3685, 47.3686)
target_position = Vector2(1400, 0)
script = ExtResource("3_rrnee")

[node name="Line2D" type="Line2D" parent="Sprite2D/LaserRay"]
visible = false
points = PackedVector2Array(0, 0, 1400, 0)
width = 5.0
default_color = Color(1, 1, 0.466667, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 3
visibility_layer = 3
position = Vector2(-3, 8)
shape = SubResource("CircleShape2D_px7d7")

[node name="HPBAR" type="ProgressBar" parent="."]
offset_left = -32.0
offset_top = -33.0
offset_right = 28.0
offset_bottom = -25.0
theme_override_styles/background = SubResource("StyleBoxFlat_qch74")
theme_override_styles/fill = SubResource("StyleBoxFlat_ooort")
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="DamageLabel" type="Label" parent="."]
offset_left = -24.0
offset_top = -44.0
offset_right = 16.0
offset_bottom = -21.0
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2(-2.00002, 15)
rotation = -1.5708
scale = Vector2(0.38, 0.38)
occluder = SubResource("OccluderPolygon2D_vjhl7")

[node name="Death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_gtfvv")
volume_db = -30.0

[node name="LaserShootBang" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_rrnee")
volume_db = -10.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
